feat(import): support bookmark HTML exports
